fix: use correct setting for mobile nav overlay text casing

--- a/source/stylesheets/overlay.sass
+++ b/source/stylesheets/overlay.sass
@@ -58,7 +58,7 @@
     flex-direction: column
     gap: 14px
     margin: 16px 0 32px
-    text-transform: #{"{{ theme.nav_text_transform }}"}
+    text-transform: #{"{{ theme.nav_text_transform_header }}"}
 
     .divider
       height: 1px
