chore: exclude custom footer from text casing settings

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -364,7 +364,7 @@ footer
   font-family: var(--secondary-font)
   width: 100%
 
-  *
+  *:not(.footer-custom-content)
     text-transform: #{"{{ theme.nav_text_transform_footer }}"}
 
   @media screen and (max-width: $break-small)
