chore: move all products link to bottom of homepage

--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -225,6 +225,8 @@ a.product-list-link
 
 // Featured Categories: when grid_image_style is default, keep category thumbs square and contained
 .featured-categories
+  margin-bottom: calc(var(--margin-size) * 1.5)
+
   .product-list-image-container-default
     padding-bottom: 100%
 
