chore: improve breakpoint handling for alternating products on homepage
- alternating products stay alternating for lower breakpoints to retain that display preference
- on smallest breakpoint, featured products should respect the `max_products_per_row_mobile` setting

--- a/source/stylesheets/_config.sass
+++ b/source/stylesheets/_config.sass
@@ -4,6 +4,7 @@ $break-large: 1080px
 $break-medium: 900px
 $break-small: 768px
 $break-extra-small: 640px
+$break-extra-extra-small: 525px
 
 @mixin appearance($str...)
   -webkit-appearance: none
