--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -286,7 +286,7 @@
         transform: scale(1.1)
 
 .home-featured-products
-  margin-bottom: var(--margin-size)
+  margin-bottom: calc(var(--margin-size) * 1.5)
 
 a.all-products-button
   margin-top: 48px
