--- a/source/stylesheets/maintenance.sass
+++ b/source/stylesheets/maintenance.sass
@@ -8,7 +8,7 @@
   .maintenance-content
     display: flex
     flex-direction: column
-    gap: var(--margin-size)
+    gap: 10px
     border-radius: var(--border-radius)
     max-width: 980px
     margin: 0 auto
@@ -16,8 +16,14 @@
     border: 1px solid var(--border-color)
     width: 50%
 
-    h1
-      font-size: 3.75rem
+    h1.store-name
+      font-size: 2rem
+
+    img
+      max-width: 100%
+      height: auto
+      margin-bottom: 20px
+      border-radius: var(--border-radius)
 
     @media screen and (max-width: $break-medium)
       padding: 40px 20px
@@ -27,10 +33,22 @@
       padding: 40px 20px
       width: 100%
 
-      h1 
-        font-size: 3rem
+      h1.store-name
+        font-size: 1.75rem
 
   .maintenance-message
     padding: 10px
-    font-size: 1.25rem
-    font-weight: 700
+    font-size: 1rem
+    font-weight: 400
+
+    @media screen and (max-width: $break-small)
+      font-size: 0.9rem
+
+  .social-icons
+    margin-top: 20px
+    gap: 5px
+
+    a
+      svg
+        width: 20px
+        height: 20px
