fix: protected password product page styling

--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -10,6 +10,14 @@
   @media screen and (max-width: $break-small)
     grid-template-columns: minmax(0, 1fr)
 
+.product-password-form-container
+  margin: 60px auto
+  padding: 0 20px
+
+  h1
+    font-size: 1.5rem
+    font-weight: 400
+
 .product-breadcrumb
   margin-bottom: 24px
 
