feat: new settings to control text scale easily without custom css

--- a/source/stylesheets/overlay.sass
+++ b/source/stylesheets/overlay.sass
@@ -52,7 +52,7 @@
 
   .overlay-page-list
     text-align: left
-    font-size: 1.25rem
+    font-size: calc(1.25rem * var(--header-text-scale, 1))
     font-weight: 500
     display: flex
     flex-direction: column
