--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -300,10 +300,7 @@ a.all-products-button
 h2.featured-title
   text-align: center
   font-weight: 500
-  font-size: 2rem
-
-  @media screen and (max-width: $break-small)
-    font-size: 1.75rem
+  font-size: 1.75em
 
   .category-list
     margin-bottom: 48px
@@ -330,6 +327,10 @@ h2.featured-title
     margin-bottom: 48px
     max-width: calc(1080px + calc(var(--side-padding) * 2))
     margin: 0 auto
+    font-size: 1rem
+
+    @media screen and (max-width: $break-medium)
+      font-size: 0.9rem
 
   .featured-message
     text-align: center
