--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -36,6 +36,13 @@
 
   --primary-font: #{"{{ theme.primary_font | font_family }}"}
   --secondary-font: #{"{{ theme.secondary_font | font_family }}"}
+  --font-scale: #{'{{ theme.global_text_scale | default: 1 }}'}
+  --product-title-scale: #{'{{ theme.product_page_heading_scale | default: 1 }}'}
+  --product-description-scale: #{'{{ theme.product_page_description_scale | default: 1 }}'}
+  --product-grid-scale: #{'{{ theme.product_grid_scale | default: 1 }}'}
+  --shop-name-scale: #{'{{ theme.shop_name_text_scale | default: 1 }}'}
+  --header-text-scale: #{'{{ theme.header_text_scale | default: 1 }}'}
+  --footer-text-scale: #{'{{ theme.footer_text_scale | default: 1 }}'}
 
   --border-radius: 4px
   --border-radius-sm: 2px
@@ -57,6 +64,9 @@
 
   @media screen and (max-width: $break-small)
     --side-padding: 16px
+
+html
+  font-size: calc(16px * var(--font-scale, 1))
 
 html, body
   height: 100%
@@ -102,7 +112,7 @@ header
   display: flex
   align-items: center
   justify-content: center
-  font-size: 3.75rem
+  font-size: calc(3rem * var(--shop-name-scale, 1) * var(--header-text-scale, 1))
   font-weight: 600
   max-width: calc(1080px + calc(var(--side-padding) * 2))
   padding: var(--margin-size) var(--side-padding)
@@ -114,17 +124,20 @@ header
     &:hover
       text-decoration: none
 
-  @media screen and (max-width: $break-small)
+  @media screen and (max-width: $break-medium)
     padding: 32px var(--side-padding)
-    font-size: 2.75rem
+    font-size: calc(2rem * var(--shop-name-scale, 1) * var(--header-text-scale, 1))
     line-height: normal
+
+  @media screen and (max-width: $break-small)
+    font-size: calc(1.75rem * var(--shop-name-scale, 1) * var(--header-text-scale, 1))
 
 // Main navigation container
 .top-nav
   display: flex
   padding: 16px 32px
   gap: 32px
-  font-size: 1.25em
+  font-size: calc(1.25em * var(--header-text-scale, 1))
   font-weight: 500
   line-height: 1em
   font-family: var(--secondary-font)
@@ -133,7 +146,7 @@ header
     text-transform: #{"{{ theme.nav_text_transform_header }}"}
 
   @media screen and (max-width: $break-medium)
-    font-size: 1em
+    font-size: calc(1em * var(--header-text-scale, 1))
   
   @media screen and (max-width: $break-small)
     padding: 16px
@@ -346,11 +359,11 @@ h1, h2, h3, h4, h5, h6
         margin-bottom: 48px
 
   h1
-    font-size: 2rem
-    font-weight: 700
+    font-size: 1.75rem
+    font-weight: 500
 
     @media screen and (max-width: $break-small)
-      font-size: 1.75rem
+      font-size: 1.5rem
 
   .page-title
     margin-bottom: 32px
@@ -363,6 +376,7 @@ footer
   padding: 64px 0
   font-family: var(--secondary-font)
   width: 100%
+  font-size: calc(1rem * var(--footer-text-scale, 1))
 
   *:not(.footer-custom-content)
     text-transform: #{"{{ theme.nav_text_transform_footer }}"}
@@ -391,6 +405,7 @@ footer
   display: block
   text-align: center
   padding: 10px 50px 20px 50px
+  font-size: calc(1rem * var(--footer-text-scale, 1))
 
   img
     display: block
@@ -551,7 +566,7 @@ footer
     text-decoration: none
 
     @media screen and (max-width: $break-medium)
-      font-size: 15px
+      font-size: 0.9375rem
       flex-direction: row
       align-items: center
       justify-content: center
