feat: option to set announcement message banner to scroll

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -26,6 +26,7 @@
 
   --announcement-background-color: #{'{{ theme.announcement_background_color }}'}
   --announcement-text-color: #{'{{ theme.announcement_text_color }}'}
+  --scroll-duration: #{'{{ theme.announcement_scroll_speed }}'}
 
   --product-status-background-color: #{"{{ theme.product_status_background_color }}"}
   --product-status-text-color: #{"{{ theme.product_status_text_color }}"}
