--- a/source/stylesheets/announcement.sass
+++ b/source/stylesheets/announcement.sass
@@ -26,6 +26,39 @@
   &.visible
     display: flex
 
+  &--scrolling
+    min-height: 64px
+    padding: 22px 0px
+    overflow: hidden
+
+    @media screen and (max-width: $break-small)
+      min-height: 50px
+      padding: 14px 0px
+
+    // Pause scrolling on hover for accessibility
+    &:hover .announcement-message__scroll-content
+      animation-play-state: paused
+
+    // Hide close button when scrolling
+    .announcement-message__close-button
+      display: none
+
+  &__scroll-wrapper
+    width: 100%
+    overflow: hidden
+    white-space: nowrap
+
+  &__scroll-content
+    display: inline-flex
+    white-space: nowrap
+    animation: scroll-announcement var(--scroll-duration, 15s) linear infinite
+
+  &__text
+    display: inline-block
+
+    .announcement-message--scrolling &
+      padding: 0 5em
+
   &__close-button
     transform: translateY(-50%)
     display: flex
@@ -38,6 +71,7 @@
     right: 32px
     top: 50%
     width: 32px
+    z-index: 2
 
     @media screen and (max-width: $break-small)
       right: 16px
@@ -45,3 +79,10 @@
   &__close-icon
     height: 14px
     width: 14px
+
+// Keyframe animation for smooth scrolling
+@keyframes scroll-announcement
+  0%
+    transform: translateX(0)
+  100%
+    transform: translateX(-20%)
