--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -54,6 +54,14 @@
   --logo-max-height: #{"{{ theme.logo_image_height | append: 'px' }}"}
   --logo-max-height-mobile: 120px
 
+  --shop-sprinkles-size: #{"{{ theme.shop_sprinkles_size | default: '2em' }}"}
+  --shop-sprinkles-animation: #{"{% case theme.shop_sprinkles_animation %}{% when 'orbit' %}orbit{% when 'tumble' %}tumble{% else %}shake{% endcase %}"}
+  --shop-sprinkles-style-duration: #{"{% case theme.shop_sprinkles_animation %}{% when 'orbit' %}5.2s{% else %}4.6s{% endcase %}"}
+  --shop-sprinkles-style-timing: #{"{% case theme.shop_sprinkles_animation %}{% when 'orbit' %}linear{% else %}cubic-bezier(0.33,0.65,0.45,1){% endcase %}"}
+  --shop-sprinkles-fall-duration: #{"{% case theme.shop_sprinkles_animation %}{% when 'orbit' %}12.5s{% else %}10.8s{% endcase %}"}
+  --shop-sprinkles-spin-animation: #{"{% if theme.shop_sprinkles_animation == 'tumble' %}tumble-spin{% else %}none{% endif %}"}
+  --shop-sprinkles-density: #{"{{ theme.shop_sprinkles_density | default: 12 }}"}
+
   // Video player customization
   --video-rounded-radius: var(--border-radius)
   --video-margin-small: calc(var(--margin-size) / 4)
@@ -132,6 +140,19 @@ header
 
   @media screen and (max-width: $break-small)
     font-size: calc(1.75rem * var(--shop-name-scale, 1) * var(--header-text-scale, 1))
+
+// shop sprinkles overrides
+.emoji
+  font-size: var(--shop-sprinkles-size) !important
+  animation-name: var(--shop-sprinkles-animation) !important
+  animation-duration: var(--shop-sprinkles-style-duration) !important
+  animation-timing-function: var(--shop-sprinkles-style-timing) !important
+
+.emoji .inner
+  animation-duration: var(--shop-sprinkles-fall-duration) !important
+
+.emoji .inner span
+  animation-name: var(--shop-sprinkles-spin-animation) !important
 
 // Main navigation container
 .top-nav
