chore: tweak featured title and message sizing on homepage

--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -302,6 +302,9 @@ h2.featured-title
   font-weight: 500
   font-size: 1.75em
 
+  @media screen and (max-width: $break-medium)
+    font-size: 1.5em
+
   .category-list
     margin-bottom: 48px
 
@@ -336,6 +339,10 @@ h2.featured-title
     text-align: center
     margin: 20px auto 60px auto
     padding: 0 1.5rem
+    font-size: 1.0rem
+
+    @media screen and (max-width: $break-medium)
+      font-size: 0.9em
 
     ol, ul
       text-align: left
