chore: rename settings for consistency (hero vs welcome)

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -18,8 +18,8 @@
 
   --border-color: #{'{{ theme.border_color }}'}
 
-  --hero-overlay-color: #{'{{ theme.welcome_overlay_color }}'}
-  --hero-text-color: #{'{{ theme.welcome_text_color }}'}
+  --welcome-overlay-color: #{'{{ theme.welcome_overlay_color }}'}
+  --welcome-text-color: #{'{{ theme.welcome_text_color }}'}
 
   --error-background-color: #950f1e
   --error-text-color: #FFFFFF
