--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -70,7 +70,7 @@
     height: 100%
 
 .home-hero-overlay
-  background-color: var(--hero-overlay-color)
+  background-color: var(--welcome-overlay-color)
   content: ""
   height: 100%
   position: relative
@@ -87,7 +87,7 @@
   opacity: #{"{% if theme.welcome_overlay_opacity == 'very_dark' %} 0.7 {% endif %}"}
 
 .home-hero-content
-  color: var(--hero-text-color)
+  color: var(--welcome-text-color)
   position: relative
   display: flex
   align-items: center
@@ -124,9 +124,9 @@
     font-size: 1.3rem
 
 .home-hero-button
-  border: 2px solid var(--hero-text-color)
+  border: 2px solid var(--welcome-text-color)
   border-radius: var(--border-radius-sm)
-  color: var(--hero-text-color)
+  color: var(--welcome-text-color)
   display: flex
   width: 274px
   min-height: 56px
@@ -144,8 +144,8 @@
     font-size: 0.8rem
 
   &:hover, &:focus
-    background-color: var(--hero-text-color)
-    color: var(--hero-overlay-color)
+    background-color: var(--welcome-text-color)
+    color: var(--welcom-overlay-color)
     text-decoration: none
 
 .home-slideshow
