--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -782,3 +782,13 @@ button.button, a.button, div.button
   padding: 0
   position: absolute
   width: 1px
+
+.visually-hidden
+  border: 0
+  clip: rect(0 0 0 0)
+  height: 1px
+  margin: -1px
+  overflow: hidden
+  padding: 0
+  position: absolute
+  width: 1px
