fix: welcome button text color setting typo

--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -140,7 +140,7 @@
 
   &:hover, &:focus
     background-color: var(--welcome-text-color)
-    color: var(--welcom-overlay-color)
+    color: var(--welcome-overlay-color)
     text-decoration: none
 
 .home-slideshow
