feat: new settings to control homepage welcome button
new settings for welcome button color, border, background, etc

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -20,6 +20,11 @@
 
   --welcome-overlay-color: #{'{{ theme.welcome_overlay_color }}'}
   --welcome-text-color: #{'{{ theme.welcome_text_color }}'}
+  --welcome-button-background-color: #{'{{ theme.welcome_button_background_color }}'}
+  --welcome-button-text-color: #{'{{ theme.welcome_button_text_color }}'}
+  --welcome-button-border-color: #{'{{ theme.welcome_button_border_color }}'}
+  --welcome-button-hover-background-color: #{'{{ theme.welcome_button_hover_background_color }}'}
+  --welcome-button-hover-text-color: #{'{{ theme.welcome_button_hover_text_color }}'}
 
   --error-background-color: #950f1e
   --error-text-color: #FFFFFF
