--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -119,9 +119,10 @@
     font-size: 1.3rem
 
 .home-hero-button
-  border: 2px solid var(--welcome-text-color)
+  background-color: var(--welcome-button-background-color)
+  border: 2px solid var(--welcome-button-border-color)
   border-radius: var(--border-radius-sm)
-  color: var(--welcome-text-color)
+  color: var(--welcome-button-text-color)
   display: flex
   width: 274px
   min-height: 56px
@@ -139,8 +140,8 @@
     font-size: 0.8rem
 
   &:hover, &:focus
-    background-color: var(--welcome-text-color)
-    color: var(--welcome-overlay-color)
+    background-color: var(--welcome-button-hover-background-color)
+    color: var(--welcome-button-hover-text-color)
     text-decoration: none
 
 .home-slideshow
